--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,16 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Mm]emoryCaptures/
+Mygame-UnityProject/[Ll]ibrary/
+Mygame-UnityProject/[Tt]emp/
+Mygame-UnityProject/[Oo]bj/
+Mygame-UnityProject/[Bb]uild/
+Mygame-UnityProject/[Bb]uilds/
+Mygame-UnityProject/[Ll]ogs/
+Mygame-UnityProject/[Mm]emoryCaptures/
 
 # Never ignore Asset meta data
-!/[Aa]ssets/**/*.meta
+!Mygame-UnityProject/[Aa]ssets/**/*.meta
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
@@ -23,7 +23,7 @@
 [Aa]ssets/Plugins/Editor/JetBrains*
 
 # Visual Studio cache directory
-.vs/
+Mygame-UnityProject/.vs/
 
 # Gradle cache directory
 .gradle/
